--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "MQTT Monitor",
   "version": "1.0.0",
   "documentation": "https://github.com/mantiz010/MQTT_Monitor",
-  "requirements": ["paho-mqtt==1.6.1"],
+  "requirements": ["paho-mqtt"],
   "dependencies": [],
   "codeowners": ["@mantiz010"],
   "iot_class": "local_push"
